--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,18 @@
 <div class="settings">
 	<h4>Twitter Home</h4>
+  <ul>
+		<li>
+			<a ui-sref="home.notifications">Notifications</a>
+		</li>
+		<li>
+			<a ui-sref="home.user">User Profile</a>
+		</li>
+		<li>
+			<a ui-sref="home.timeline">Timeline</a>
+		</li>
+	</ul>
+
+  <div ui-view />
 
 
 </div>
